name:                bomcheck

-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            A weather checker for Australians
homepage:            www.github.com/shadowcreator/bomcheck
license:             BSD3
license-file:        LICENSE
author:              Liam Wigney
maintainer:          liamw950@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.8
executable bomcheck
  -- .hs or .lhs file containing the Main module.
  -- main-is:             
  
  -- Modules included in this executable, other than Main.
  -- other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:       base ==4.6.*
  