name:                bomcheck

-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            A weather checker for Australians
homepage:            www.github.com/shadowcreator/bomcheck
license:             BSD3
license-file:        LICENSE
author:              Liam Wigney
maintainer:          liamw950@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.8

-- Should this also be built into a library
executable bomcheck
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base ==4.6.*
                       HTTP ==4000.2.*
                       ConfigFile ==1.*
                       HaXml ==1.*
                       base ==4.6.*
